@@ -25,7 +25,6 @@
  */
 package org.niis.xroad.confclient.core;
 
-import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.TestCertUtil;
 
 import lombok.SneakyThrows;
@@ -40,7 +39,7 @@ import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
 import java.util.List;
 
-import static ee.ria.xroad.common.TestExceptionUtils.codedException;
+import static ee.ria.xroad.common.TestExceptionUtils.xrdRuntimeException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
@@ -76,7 +75,7 @@ class ConfigurationParserTest {
                         getConfigurationSource(
                                 TestCertUtil.getConsumer().certChain[0],
                                 "EE", "http://foo.bar.baz")))
-                .is(codedException(ErrorCode.GLOBAL_CONF_MISSING_SIGNED_DATA_EXPIRATION_DATE.code()));
+                .is(xrdRuntimeException(ErrorCode.GLOBAL_CONF_MISSING_SIGNED_DATA_EXPIRATION_DATE));
     }
 
     /**
@@ -89,7 +88,7 @@ class ConfigurationParserTest {
                         getConfigurationSource(
                                 TestCertUtil.getConsumer().certChain[0],
                                 "EE", "http://foo.bar.baz")))
-                .is(codedException(ErrorCode.GLOBAL_CONF_HEADER_FIELD_MISSING.code()));
+                .is(xrdRuntimeException(ErrorCode.GLOBAL_CONF_HEADER_FIELD_MISSING));
     }
 
     /**
@@ -102,7 +101,7 @@ class ConfigurationParserTest {
                         getConfigurationSource(
                                 TestCertUtil.getProducer().certChain[0],
                                 "EE", "http://foo.bar.baz")))
-                .is(codedException(ErrorCode.GLOBAL_CONF_MISSING_VERIFICATION_CERT.code()));
+                .is(xrdRuntimeException(ErrorCode.GLOBAL_CONF_MISSING_VERIFICATION_CERT));
     }
 
     /**
@@ -115,7 +114,7 @@ class ConfigurationParserTest {
                         getConfigurationSource(
                                 TestCertUtil.getConsumer().certChain[0],
                                 "EE", "http://foo.bar.baz")))
-                .is(codedException(ErrorCode.GLOBAL_CONF_SIGNATURE_DECODE_FAILURE.code()));
+                .is(xrdRuntimeException(ErrorCode.GLOBAL_CONF_SIGNATURE_DECODE_FAILURE));
     }
 
     /**
@@ -128,7 +127,7 @@ class ConfigurationParserTest {
                         getConfigurationSource(
                                 TestCertUtil.getConsumer().certChain[0],
                                 "EE", "http://foo.bar.baz")))
-                .is(codedException(ErrorCode.GLOBAL_CONF_SIGNATURE_VERIFICATION_FAILURE.code()));
+                .is(xrdRuntimeException(ErrorCode.GLOBAL_CONF_SIGNATURE_VERIFICATION_FAILURE));
     }
 
     // ------------------------------------------------------------------------
@@ -149,9 +148,7 @@ class ConfigurationParserTest {
     }
 
     private static List<ConfigurationFile> parse(final String path,
-                                                 ConfigurationSource source) throws Exception {
-        System.setProperty(SystemProperties.CONFIGURATION_PATH, path);
-
+                                                 ConfigurationSource source) {
         ConfigurationParser.HASH_TO_CERT.clear();
 
         if (!source.getLocations().isEmpty()) {
@@ -163,7 +160,7 @@ class ConfigurationParserTest {
                 }
             };
 
-            return parser.parse(source.getLocations().get(0)).getFiles();
+            return parser.parse(source.getLocations().getFirst()).getFiles();
         }
 
         return null;
@@ -191,4 +188,5 @@ class ConfigurationParserTest {
             }
         };
     }
+
 }
